# imposter-game

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
game/: consumers.py  routing.py  urls.py  views.py
imposter_game/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
templates/game/: room.html
